--- a/options.html
+++ b/options.html
@@ -209,6 +209,19 @@
         </select>
     </div>
 
+    <div class="setting-group">
+        <div class="toggle-row">
+            <div>
+                <div class="toggle-label">Show Scheduler</div>
+                <div class="toggle-description">Display scheduler on the right side</div>
+            </div>
+            <label class="toggle">
+                <input type="checkbox" id="schedulerToggle">
+                <span class="toggle-slider"></span>
+            </label>
+        </div>
+    </div>
+
     <div class="status" id="status"></div>
 </div>
 
