--- a/index.html
+++ b/index.html
@@ -10,18 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
-    <script>
-        // Set text color immediately to prevent flash on load
-        (function () {
-            const hour = new Date().getHours() + new Date().getMinutes() / 60;
-            const isDarkTime = hour >= 19 || hour < 6;
-            document.documentElement.classList.add(isDarkTime ? 'dark-mode' : 'light-mode');
-            // Enable transitions after a brief delay
-            setTimeout(() => {
-                document.body.classList.add('transitions-enabled');
-            }, 50);
-        })();
-    </script>
+    <script src="scripts/init.js"></script>
 </head>
 
 <body class="no-transitions">
