fix text color changing

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="scripts/init.js"></script>
 </head>
 
-<body class="no-transitions">
+<body>
 <div class="dynamic-background" id="dynamic-background"></div>
 <div class="stars-container" id="stars-container"></div>
 
