Fix search functionality and update search icon styling

--- a/index.html
+++ b/index.html
@@ -27,21 +27,21 @@
 
     <!-- Search -->
     <section class="search-section">
-        <form class="search-form" action="https://www.google.com/search" method="get">
-            <label for="q" class="search-label">
-                <img src="images/google.svg" alt="Google logo" class="search-logo">
-            </label>
-            <input
+        <form class="search-form" id="search-form">
+            <label for="q"></label><input
                 type="text"
                 id="q"
                 name="q"
                 class="search-input"
-                placeholder="Search Google or type a URL"
+                placeholder="Search the web..."
                 autocomplete="off"
                 required
             >
             <button type="submit" class="search-button" aria-label="Search">
-                <img src="images/search-icon.svg" alt="Search" class="search-icon">
+                <svg class="search-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <circle cx="11" cy="11" r="8"></circle>
+                    <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
+                </svg>
             </button>
         </form>
     </section>
