Update version to 1.1.0, add scheduler ID input, and enhance quick links

--- a/options.html
+++ b/options.html
@@ -220,6 +220,12 @@
         </div>
     </div>
 
+    <div class="setting-group" id="schedulerIdGroup" style="display: none;">
+        <label for="schedulerId">Scheduler ID</label>
+        <p class="description">Your unique scheduler identifier</p>
+        <input type="text" id="schedulerId" placeholder="Enter your scheduler ID" maxlength="50">
+    </div>
+
     <div class="status" id="status"></div>
 </div>
 
