--- a/index.html
+++ b/index.html
@@ -29,16 +29,17 @@
     <section class="search-section">
         <form class="search-form" id="search-form">
             <label for="q"></label><input
-                type="text"
-                id="q"
-                name="q"
-                class="search-input"
-                placeholder="Search the web..."
-                autocomplete="off"
-                required
-            >
+            type="text"
+            id="q"
+            name="q"
+            class="search-input"
+            placeholder="Search the web..."
+            autocomplete="off"
+            required
+        >
             <button type="submit" class="search-button" aria-label="Search">
-                <svg class="search-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <svg class="search-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                     stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                     <circle cx="11" cy="11" r="8"></circle>
                     <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
                 </svg>
@@ -49,6 +50,15 @@
     <!-- Quick Links -->
     <section class="quick-links-section">
         <div id="quick-links" class="quick-links">
+            <a href="https://outlook.live.com" class="quick-link">
+                <span class="quick-link-icon"><img src="https://favicon.im/outlook.live.com" alt="Outlook icon" class="quick-link-favicon"></span>
+                <span class="quick-link-text">Outlook</span>
+            </a>
+            <a href="https://onedrive.live.com" class="quick-link">
+                <span class="quick-link-icon"><img src="https://onedrive.live.com/_layouts/15/images/odbfavicon.ico" alt="OneDrive icon"
+                                                   class="quick-link-favicon"></span>
+                <span class="quick-link-text">OneDrive</span>
+            </a>
             <a href="https://word.cloud.microsoft" class="quick-link">
                 <span class="quick-link-icon"><img src="https://favicon.im/word.cloud.microsoft" alt="Word icon" class="quick-link-favicon"></span>
                 <span class="quick-link-text">Word</span>
@@ -78,6 +88,10 @@
                 <span class="quick-link-icon"><img src="https://favicon.im/github.com" alt="GitHub icon" class="quick-link-favicon"></span>
                 <span class="quick-link-text">GitHub</span>
             </a>
+            <a href="https://spotify.com" class="quick-link">
+                <span class="quick-link-icon"><img src="https://favicon.im/spotify.com" alt="Spotify icon" class="quick-link-favicon"></span>
+                <span class="quick-link-text">Spotify</span>
+            </a>
         </div>
     </section>
 </div>
@@ -85,7 +99,6 @@
 <!-- Scheduler iframe -->
 <div id="scheduler-container" class="scheduler-container hidden">
     <iframe src="https://jerryxf.net/scheduler?homeisland=true" title="Scheduler"></iframe>
-    <!--    <iframe src="https://jerryxf.net/scheduler?homeisland=true" title="Scheduler"></iframe>-->
 </div>
 
 <footer class="footer">
