Add customizable quick links section with dynamic shortcut management

--- a/index.html
+++ b/index.html
@@ -50,48 +50,7 @@
     <!-- Quick Links -->
     <section class="quick-links-section">
         <div id="quick-links" class="quick-links">
-            <a href="https://outlook.live.com" class="quick-link">
-                <span class="quick-link-icon"><img src="https://favicon.im/outlook.live.com" alt="Outlook icon" class="quick-link-favicon"></span>
-                <span class="quick-link-text">Outlook</span>
-            </a>
-            <a href="https://onedrive.live.com" class="quick-link">
-                <span class="quick-link-icon"><img src="https://onedrive.live.com/_layouts/15/images/odbfavicon.ico" alt="OneDrive icon"
-                                                   class="quick-link-favicon"></span>
-                <span class="quick-link-text">OneDrive</span>
-            </a>
-            <a href="https://word.cloud.microsoft" class="quick-link">
-                <span class="quick-link-icon"><img src="https://favicon.im/word.cloud.microsoft" alt="Word icon" class="quick-link-favicon"></span>
-                <span class="quick-link-text">Word</span>
-            </a>
-
-            <a href="https://excel.cloud.microsoft" class="quick-link">
-                <span class="quick-link-icon"><img src="https://favicon.im/excel.cloud.microsoft" alt="Excel icon" class="quick-link-favicon"></span>
-                <span class="quick-link-text">Excel</span>
-            </a>
-
-            <a href="https://powerpoint.cloud.microsoft" class="quick-link">
-                <span class="quick-link-icon"><img src="https://favicon.im/powerpoint.cloud.microsoft" alt="PowerPoint icon" class="quick-link-favicon"></span>
-                <span class="quick-link-text">PowerPoint</span>
-            </a>
-
-            <a href="https://mail.google.com" class="quick-link">
-                <span class="quick-link-icon"><img src="https://favicon.im/mail.google.com" alt="Gmail icon" class="quick-link-favicon"></span>
-                <span class="quick-link-text">Gmail</span>
-            </a>
-
-            <a href="https://youtube.com" class="quick-link">
-                <span class="quick-link-icon"><img src="https://favicon.im/youtube.com" alt="YouTube icon" class="quick-link-favicon"></span>
-                <span class="quick-link-text">YouTube</span>
-            </a>
-
-            <a href="https://github.com" class="quick-link">
-                <span class="quick-link-icon"><img src="https://favicon.im/github.com" alt="GitHub icon" class="quick-link-favicon"></span>
-                <span class="quick-link-text">GitHub</span>
-            </a>
-            <a href="https://spotify.com" class="quick-link">
-                <span class="quick-link-icon"><img src="https://favicon.im/spotify.com" alt="Spotify icon" class="quick-link-favicon"></span>
-                <span class="quick-link-text">Spotify</span>
-            </a>
+            <!-- Shortcuts are loaded dynamically from storage -->
         </div>
     </section>
 </div>
