--- a/options.html
+++ b/options.html
@@ -22,7 +22,7 @@
         }
 
         .container {
-            max-width: 500px;
+            max-width: 576px;
             margin: 0 auto;
             background: white;
             border-radius: 16px;
@@ -169,6 +169,147 @@
             background: #d4edda;
             color: #155724;
         }
+
+        .shortcuts-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 12px;
+        }
+
+        .shortcuts-header label {
+            margin-bottom: 0;
+        }
+
+        .btn-secondary {
+            padding: 6px 12px;
+            border: 2px solid #e0e0e0;
+            border-radius: 6px;
+            background: white;
+            cursor: pointer;
+            font-size: 12px;
+            font-family: inherit;
+            color: #34495e;
+            transition: border-color 0.2s, background 0.2s;
+        }
+
+        .btn-secondary:hover {
+            border-color: #c4b8a0;
+            background: #faf8f5;
+        }
+
+        .shortcut-list {
+            display: flex;
+            flex-direction: column;
+            gap: 8px;
+            margin-bottom: 12px;
+        }
+
+        .shortcut-item {
+            display: flex;
+            gap: 6px;
+            align-items: center;
+            padding: 8px;
+            background: #f8f8f8;
+            border-radius: 8px;
+        }
+
+        .reorder-btns {
+            display: flex;
+            flex-direction: column;
+            gap: 2px;
+            flex-shrink: 0;
+        }
+
+        .btn-reorder {
+            padding: 4px 6px;
+            border: none;
+            background: #e0e0e0;
+            cursor: pointer;
+            color: #555;
+            font-size: 10px;
+            line-height: 1;
+            border-radius: 3px;
+            transition: background 0.2s;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .btn-reorder:hover {
+            background: #c4b8a0;
+        }
+
+        .btn-reorder:disabled {
+            opacity: 0.3;
+            cursor: default;
+        }
+
+        .shortcut-item input {
+            padding: 6px 8px;
+            border: 2px solid #e0e0e0;
+            border-radius: 6px;
+            font-size: 13px;
+            transition: border-color 0.2s;
+        }
+
+        .shortcut-item input:focus {
+            outline: none;
+            border-color: #c4b8a0;
+        }
+
+        .shortcut-item input::placeholder {
+            color: #aaa;
+        }
+
+        .shortcut-item .shortcut-name {
+            width: 80px;
+            flex-shrink: 0;
+        }
+
+        .shortcut-item .shortcut-url {
+            flex: 1;
+            min-width: 120px;
+        }
+
+        .shortcut-item .shortcut-favicon {
+            width: 140px;
+            flex-shrink: 0;
+        }
+
+        .btn-remove {
+            padding: 4px 8px;
+            border: none;
+            background: transparent;
+            cursor: pointer;
+            color: #e74c3c;
+            font-size: 16px;
+            line-height: 1;
+            transition: opacity 0.2s;
+            flex-shrink: 0;
+        }
+
+        .btn-remove:hover {
+            opacity: 0.7;
+        }
+
+        .btn-add {
+            width: 100%;
+            padding: 8px;
+            border: 2px dashed #ccc;
+            border-radius: 8px;
+            background: transparent;
+            cursor: pointer;
+            font-size: 13px;
+            font-family: inherit;
+            color: #7f8c8d;
+            transition: border-color 0.2s, color 0.2s;
+        }
+
+        .btn-add:hover {
+            border-color: #c4b8a0;
+            color: #34495e;
+        }
     </style>
 </head>
 <body>
@@ -224,6 +365,18 @@
         <label for="schedulerId">Scheduler ID</label>
         <p class="description">Your unique scheduler identifier</p>
         <input type="text" id="schedulerId" placeholder="Enter your scheduler ID" maxlength="50">
+    </div>
+
+    <div class="setting-group">
+        <div class="shortcuts-header">
+            <label>Quick Links</label>
+            <button type="button" class="btn-secondary" id="resetShortcuts">Reset to Default</button>
+        </div>
+        <p class="description">Customize your quick access shortcuts. Leave favicon URL empty to auto-detect.</p>
+        <div id="shortcutList" class="shortcut-list">
+            <!-- Shortcuts will be dynamically added here -->
+        </div>
+        <button type="button" class="btn-add" id="addShortcut">+ Add Shortcut</button>
     </div>
 
     <div class="status" id="status"></div>
