--- a/options.html
+++ b/options.html
@@ -16,7 +16,7 @@
 
         body {
             font-family: "Outfit", sans-serif;
-            background: linear-gradient(135deg, #c4b8a0, #d5cbb8, #e8e0d0);
+            background: linear-gradient(135deg, #b3a792, #c7bdab, #d6cfc1);
             padding: 40px 20px;
             min-height: 100vh;
         }
