--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 
 <footer class="footer">
     <p class="footer-text">🏝️ Home Island, made with ❤️ by Jerry</p>
+    <a class="footer-settings-button" href="./options.html">⚙️</a>
 </footer>
 
 <script src="scripts/main.js"></script>
